fix: ProjectService의 findCloudAndContainerInfo() 메서드의 로직 수정